- 섹션5 : 커뮤니티

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -42,3 +42,7 @@ a {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+
+.justify-between {
+  justify-content: space-between;
+}
